--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="author" content="Aaron Vincent B. Manlogon">
-    <title>REGISTRATION FORM</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+    <title>Registration Form</title>
 </head>
 <body>
 <br>
@@ -33,11 +31,12 @@
   </tr>
 </table>
 <br><br>
+<div class="table1">
 <table class="one">
   <tr>
     <td class="drrm" colspan="6">DRRM Form No.1</td>
   </tr>
-  <tr>
+  <tr class="drr">
     <td class="col1" id="red">Student Name:</td>
     <td class="normal" id="name">&nbsp;MANLOGON, AARON VINCENT B.</td>
     <td id="red">Curr Year:</td>
@@ -45,7 +44,7 @@
     <td id="red">College:</td>
     <td class="normal" id="c">&nbsp;CS</td>
   </tr>
-  <tr>
+  <tr class="drr">
     <td class="col1" id="red">Student No.:</td>
     <td class="normal">&nbsp;20180110741 &nbsp;&nbsp;&nbsp;&nbsp;OLD STUDENT</td>
     <td id="red">Degree Program:</td>
@@ -53,7 +52,7 @@
     <td id="red">Curriculum Code:</td>
     <td class="normal">&nbsp;CCS2019</td>
   </tr>
-  <tr>
+  <tr class="drr">
     <td class="col1" id="red">Address:</td>
     <td class="normal" colspan="4">&nbsp;B91 L4 KATALINUHAN ST. KARANGALAN VILLAGE SAN ISIDRO, CAINTA, RIZAL</td>
   </tr>
@@ -69,7 +68,7 @@
       </table>
     </td>
   </tr>
-  <tr>
+  <tr class="hvr">
     <td class="col1" id="subj">CCS 2201</td>
     <td id="sec">- CSAD</td>
     <td id="desc">Architecture and Organization</td>
@@ -80,7 +79,7 @@
     <td id="m">M</td>
     <td id="room">CS 211</td>
   </tr>
-  <tr>
+  <tr class="hvr">
     <td class="col1" id="subj">CCS 2202</td>
     <td id="sec">- CSAD</td>
     <td id="desc">Discrete Structures 2</td>
@@ -91,7 +90,7 @@
     <td id="m">M</td>
     <td id="room">CS 211</td>
   </tr>
-  <tr>
+  <tr class="hvr">
     <td class="col1" id="subj">CCS 2203</td>
     <td id="sec">- CSAD</td>
     <td id="desc">Operating Systems</td>
@@ -102,7 +101,7 @@
     <td id="m">M</td>
     <td id="room">CS 211</td>
   </tr>
-  <tr>
+  <tr class="hvr">
     <td class="col1" id="subj">CCS 2203</td>
     <td id="sec">- CSAD</td>
     <td id="desc">Operating Systems</td>
@@ -112,7 +111,7 @@
     <td id="m">M</td>
     <td id="room">CS AL B</td>
   </tr>
-  <tr>
+  <tr class="hvr">
     <td class="col1" id="subj">CCS 2204</td>
     <td id="sec">- CSAD</td>
     <td id="desc">Statistics for CS</td>
@@ -123,7 +122,7 @@
     <td id="m">M</td>
     <td id="room">CS 211</td>
   </tr>
-  <tr>
+  <tr class="hvr">
     <td class="col1" id="subj">CIA 1101</td>
     <td id="sec">- CSAD</td>
     <td id="desc">Information Assurance and Security 1</td>
@@ -134,7 +133,7 @@
     <td id="m">M</td>
     <td id="room">CS 211</td>
   </tr>
-  <tr>
+  <tr class="hvr">
     <td class="col1" id="subj">CIA 1101</td>
     <td id="sec">- CSAD</td>
     <td id="desc">Information Assurance and Security 1</td>
@@ -144,7 +143,7 @@
     <td id="m">M</td>
     <td id="room">CS BL A</td>
   </tr>
-  <tr>
+  <tr class="hvr">
     <td class="col1" id="subj">CIP 1101</td>
     <td id="sec">- CSAD</td>
     <td id="desc">Integrative Programming and Technologies 1</td>
@@ -155,7 +154,7 @@
     <td id="m">M</td>
     <td id="room">CS 211</td>
   </tr>
-  <tr>
+  <tr class="hvr">
     <td class="col1" id="subj">CIP 1101</td>
     <td id="sec">- CSAD</td>
     <td id="desc">Integrative Programming and Technologies 1</td>
@@ -165,7 +164,7 @@
     <td id="m">M</td>
     <td id="room">CS AL A</td>
   </tr>
-  <tr>
+  <tr class="hvr">
     <td class="col1" id="subj">CSE 1101</td>
     <td id="sec">- CSAD</td>
     <td id="desc">Software Engineering 1</td>
@@ -176,7 +175,7 @@
     <td id="m">M</td>
     <td id="room">CS 305</td>
   </tr>
-  <tr>
+  <tr class="hvr">
     <td class="col1" id="subj">CSE 1101</td>
     <td id="sec">- CSAD</td>
     <td id="desc">Software Engineering 1</td>
@@ -186,7 +185,7 @@
     <td id="m">M</td>
     <td id="room">CIT CL B</td>
   </tr>
-  <tr>
+  <tr class="hvr">
     <td class="col1" id="subj">PEN 4312</td>
     <td id="sec">- B54TC</td>
     <td id="desc">Badminton</td>
@@ -212,6 +211,7 @@
     <td id="units">23.00</td>
   </tr>
 </table>
+</div>
 <br><br><br>
 </body>
 </html>  
